# Qariee

./: .gitignore  CLAUDE.md  CNAME  README.md  TODO.md  backend.md  dev.md  index.html  privacy.html  production.md  publishing-checklist.md  qariee  tests.md  unit-testing-strategy.md
app/: app.json  dataflow.md  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
app/__mocks__/: async-storage.ts  database.ts  expo-asset.ts  expo-audio.ts  expo-file-system.ts  expo-media-control.ts  expo-sqlite.ts  react-native-background-timer.ts
app/__tests__/services/: audioService.test.ts  audioStorage.test.ts  downloadService.test.ts
app/android/: settings.gradle
app/app/: _layout.tsx  about.tsx  index.tsx  player.tsx  settings.tsx
app/scripts/: generate-db.js
backend/: README.md  download-audio-to-r2.sh  sync-to-r2.sh
backend/cli/: pyproject.toml  qariee
backend/cli/qariee_cli/: __init__.py  main.py
backend/cli/qariee_cli/commands/: add_reciter.py  generate_db.py  list.py  sync.py  upload_audio.py  verify.py
backend/cli/qariee_cli/utils/: colors.py  config.py  db_json.py  download.py  paths.py  r2.py
backend/scripts/: download-audio-to-r2.sh  sync-to-r2.sh
docs/: DEV.md  FINDINGS.md  HISTORY.md  IDEAS.md  TASKS.MD  bugs.md  dev.md  review.md  tests.md
found/: AudioContext.tsx  audioService.ts
plans/: partial-reciters-support.md  reciter-sorting.md
reports/: code-review-report.md  code-review.md  code-simplification-review.md  performance-battery-audit.md  react-expert-review-2026-01-09.md  transition-analysis.md
(+50 files in other folders)
