[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qariee-cli"
version = "1.0.0"
description = "CLI tool for managing Qariee CDN content"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
]

[project.scripts]
qariee = "qariee_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
